[web_export] new revision

--- a/web_export_view/AUTHORS.txt
+++ b/web_export_view/AUTHORS.txt
@@ -5,3 +5,4 @@ Simone Orsi <simone.orsi@domsense.com> [simahawk]
 Lorenzo Battistini <lorenzo.battistini@agilebg.com>
 Stefan Rijnhart <stefan@therp.nl>
 Mariano Ruiz <mrsarm@gmail.com>
+Cristian Salamea <ovnicraft@gmail.com>
