[crm_lead_correct] now on opportunity is possible to see also sale order and other opportunity

--- a/crm_lead_correct/i18n/it.po
+++ b/crm_lead_correct/i18n/it.po
@@ -302,3 +302,13 @@ msgstr "Data di inizio"
 #: model:ir.model,name:crm_lead_correct.model_crm_case_stage
 msgid "Stage of case"
 msgstr "Fasi del caso"
+
+#. module: crm
+#: view:crm.lead:0
+msgid "Street..."
+msgstr "Via..."
+
+#. module: crm
+#: view:crm.lead:0
+msgid "ZIP"
+msgstr "CAP"
