[account_invoice_entry_date] fix maturity view on account invoice based on currency of journal

--- a/account_invoice_entry_date/i18n/it.po
+++ b/account_invoice_entry_date/i18n/it.po
@@ -57,4 +57,9 @@ msgstr "Data di registrazione"
 msgid "Error date !"
 msgstr "Data errata !"
 
+#. module: account_invoice_entry_date
+#: field:account.move.line,maturity_currency:0
+msgid "Currency"
+msgstr "Valuta"
+
 
