--- a/sale_order_confirm/i18n/it.po
+++ b/sale_order_confirm/i18n/it.po
@@ -66,7 +66,7 @@ msgstr "Unità di Misura"
 #. module: sale_order_confirm
 #: field:sale.order.line,qty_available:0
 msgid "Quantity On Hand"
-msgstr "Q.tà A Magazzino"
+msgstr "Q.tà A Mag"
 
 #. module: sale_order_confirm
 #: view:sale.order:0
@@ -257,7 +257,7 @@ msgstr "Attesa Risposta Cliente"
 #. module: sale_order_confirm
 #: field:sale.order.line,virtual_available:0
 msgid "Quantity Available"
-msgstr "Q.tà Disponibile"
+msgstr "Q.tà Disp"
 
 #. module: sale_order_confirm
 #: view:sale.order:0
@@ -338,7 +338,7 @@ msgstr "Limite Credito"
 #. module: sale_order_confirm
 #: field:sale.order.line,delivered_qty:0
 msgid "Delivered Qty"
-msgstr "Q.tà Consegnate"
+msgstr "Q.tà Cons."
 
 #. module: sale_order_confirm
 #: field:res.company,default_property_payment_term:0
