add check for invoice registered in period that already have a vat statement not in state draft

--- a/l10n_it_account/i18n/it.po
+++ b/l10n_it_account/i18n/it.po
@@ -47,6 +47,18 @@ msgstr "Riconciliazione Scritture"
 msgid "B.B. 30/60 GG Data Fattura"
 msgstr "B.B. 30/60 GG Data Fattura"
 
+#. module: l10n_it_account
+#: code:addons/l10n_it_account/account/invoice.py:91
+#, python-format
+msgid "Period Mismatch Error!"
+msgstr "Errore nel Periodo!"
+
+#. module: l10n_it_account
+#: code:addons/l10n_it_account/account/invoice.py:92
+#, python-format
+msgid "Period %s have already a closed vat statement."
+msgstr "Il periodo %s ha già una liquidazione IVA chiusa."
+
 #. module: account
 #: view:account.account:0
 #: view:account.bank.statement:0
