--- a/l10n_it_account/i18n/it.po
+++ b/l10n_it_account/i18n/it.po
@@ -3707,7 +3707,7 @@ msgstr "Contropartita centralizzata"
 #: code:addons/account/account_move_line.py:578
 #, python-format
 msgid "You can not create journal items on a \"view\" account %s %s"
-msgstr "Non è possibile creare registrazioni contabili sul conto di tipo \"Vitsa\" %s %s"
+msgstr "Non è possibile creare registrazioni contabili sul conto di tipo \"Vista\" %s %s"
 
 #. module: account
 #: model:ir.model,name:account.model_account_partner_reconcile_process
